backend/api/tests/integration/snapshots/integration__jig__live_up_to_date_flag-2.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "id": "[id]",
  "publishedAt": "[published_at]",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": true,
  "jigData": {
    "createdAt": "2021-03-04T00:46:26.134651Z",
    "lastEdited": "[last_edited]",
    "draftOrLive": "live",
    "displayName": "name",
    "modules": [
      {
        "id": "[id]",
        "kind": "Cover",
        "is_complete": true
      }
    ],
    "ageRanges": [],
    "affiliations": [],
    "language": "en",
    "categories": [],
    "additionalResources": [],
    "description": "test description",
    "defaultPlayerSettings": {
      "direction": "ltr",
      "displayScore": true,
      "trackAssessments": true,
      "dragAssist": true
    },
    "theme": "Blank",
    "audioBackground": null,
    "audioEffects": {
      "feedbackPositive": "[audio]",
      "feedbackNegative": "[audio]"
    },
    "privacyLevel": "unlisted",
    "locked": false,
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {}
  },
  "isLiked": false,
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false
  }
}
