backend/api/tests/integration/snapshots/integration__jig__update.snap
---
source: tests/integration/jig.rs
expression: body

---
{
  "jig": {
    "id": "3a71522a-cd77-11eb-8dc1-af3e35f7c743",
    "displayName": "",
    "modules": [],
    "ageRanges": [],
    "affiliations": [],
    "goals": [],
    "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
    "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
    "authorName": "Bobby Tables",
    "language": "en",
    "categories": [],
    "publishAt": null,
    "additionalResources": [],
    "description": "test description",
    "lastEdited": null,
    "isPublic": true,
    "defaultPlayerSettings": {
      "direction": "ltr",
      "displayScore": false,
      "trackAssessments": false,
      "dragAssist": false
    },
    "theme": "Blank",
    "audioBackground": "DancingHappy",
    "audioEffects": {
      "feedbackPositive": [],
      "feedbackNegative": []
    }
  }
}
