backend/api/tests/integration/snapshots/integration__jig__update_and_publish-3.snap
---
source: tests/integration/jig.rs
expression: body
---
{
  "id": "19becb2b-bff7-4c1b-bb2c-16f2e098d3d3",
  "publishedAt": "2022-06-22T17:57:33.149359Z",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "jigData": {
    "createdAt": "2021-03-04T00:46:26.134651Z",
    "lastEdited": "[last_edited]",
    "draftOrLive": "live",
    "displayName": "name",
    "modules": [
      {
        "id": "865eeae6-f081-49bb-87bb-827296a8a82b",
        "kind": "Cover",
        "is_complete": true
      }
    ],
    "ageRanges": [],
    "affiliations": [],
    "language": "en",
    "categories": [],
    "additionalResources": [],
    "description": "test description",
    "defaultPlayerSettings": {
      "direction": "ltr",
      "displayScore": true,
      "trackAssessments": true,
      "dragAssist": true
    },
    "theme": "Blank",
    "audioBackground": null,
    "audioEffects": {
      "feedbackPositive": "[audio]",
      "feedbackNegative": "[audio]"
    },
    "privacyLevel": "public",
    "locked": false,
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {}
  },
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false
  }
}
